# photo-workflow

./: .gitignore  README.md  pyproject.toml
docs/: local_execution.md
src/photo_workflow/: __init__.py  analyzer.py  cli.py  default_quality_model.json  features.py  formats.py  model.py
tests/: test_analyzer.py  test_cli.py  test_local_execution.py  test_model.py
