[project]
name = "photo-workflow"
version = "0.1.0"
description = "Local CLI for sorting images by blur and exposure quality."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.0.0",
    "pillow-heif>=1.1.0",
]

[project.scripts]
photo-workflow = "photo_workflow.cli:main"

[tool.uv]
package = true

[tool.setuptools.package-data]
photo_workflow = ["default_quality_model.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
